<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#2B2B2B"
        myapp:layout_constraintBottom_toTopOf="@+id/settingScrollView"
        myapp:layout_constraintEnd_toEndOf="parent"
        myapp:layout_constraintStart_toStartOf="parent"
        myapp:layout_constraintTop_toTopOf="parent"
        myapp:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/settingLabel_setting"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="left|center_vertical"
            android:text="@string/setting"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            myapp:layout_constraintBottom_toBottomOf="parent"
            myapp:layout_constraintEnd_toEndOf="parent"
            myapp:layout_constraintStart_toStartOf="parent"
            myapp:layout_constraintTop_toTopOf="parent"
            myapp:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/settingScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        myapp:layout_constraintBottom_toBottomOf="parent"
        myapp:layout_constraintEnd_toEndOf="parent"
        myapp:layout_constraintStart_toStartOf="parent"
        myapp:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/layout"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/doublePagedCheckBox"
                    android:layout_alignBottom="@+id/doublePagedCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/double_paged"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/doublePagedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/lockRotationCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/rotation_lock"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/lockRotationCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/globalPaginationCheckBox"
                    android:layout_alignBottom="@+id/globalPaginationCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/global_pagination"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/globalPaginationCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/theme"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:baselineAligned="true"
                android:clipToPadding="true">

                <Button
                    android:id="@+id/themeWhiteButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#F6F6F6" />

                <Button
                    android:id="@+id/themeBrownButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#F8E29B"
                    android:paddingRight="10dp" />

                <Button
                    android:id="@+id/themeDarkButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#434343"
                    android:paddingRight="10dp" />

                <Button
                    android:id="@+id/themeBlackButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#000000" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/page_transition_effect"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/pageTransitionGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/noneRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/none_effect"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/slideRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slide_effect"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/curlRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/curl_effect"
                    android:textSize="17sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/TextView20"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/voice"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/mediaOverlayCheckBox"
                    android:layout_alignBottom="@+id/mediaOverlayCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/mediaoverlay"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/mediaOverlayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/ttsCheckBox"
                    android:layout_alignBottom="@+id/ttsCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tts"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/ttsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/autoStartPlayingCheckBox"
                    android:layout_alignBottom="@+id/autoStartPlayingCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/auto_start_playing"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/autoStartPlayingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/autoLoadNewChapterCheckBox"
                    android:layout_alignBottom="@+id/autoLoadNewChapterCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/auto_load_new_chapter"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/autoLoadNewChapterCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/highlightTextToVoiceCheckBox"
                    android:layout_alignBottom="@+id/highlightTextToVoiceCheckBox"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/highlight_text_to_voice"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/highlightTextToVoiceCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/informationTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/information"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reader"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/skyepubTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/skyepub"
                android:textColor="#033F70"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>