<!--
  ~ Module: r2-testapp-kotlin
  ~ Developers: Aferdita Muriqi, Clément Baumann, Mostapha Idoubihi, Paul Stoica
  ~
  ~ Copyright (c) 2018. European Digital Reading Lab. All rights reserved.
  ~ Licensed to the Readium Foundation under one or more contributor license agreements.
  ~ Use of this source code is governed by a BSD-style license which is detailed in the
  ~ LICENSE file present in the project repository where this source code is maintained.
  -->

<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:dragEdge="right"
    app:mode="same_level">

    <FrameLayout
        android:id="@+id/delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="#ffcc0000">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/front_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/bookmark_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/bookmark_chapter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/chapter_page"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/overflow"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bookmark_progression"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/progression"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/overflow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmark_chapter" />

            <TextView
                android:id="@+id/bookmark_timestamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="right"
                android:text="@string/timestamp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/overflow"
                app:layout_constraintStart_toStartOf="@+id/bookmark_chapter"
                app:layout_constraintTop_toBottomOf="@+id/bookmark_progression" />

            <ImageView
                android:id="@+id/overflow"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/more_options"
                android:src="@drawable/icon_overflow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bookmarked" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>